fix: file input btn having text wrap

--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -149,7 +149,7 @@
 }
 
 .input-btn {
-    padding: 0 1rem;
+    padding: 0 1rem !important;
     height: 3rem;
     min-width: 8rem;
 }
